# hmmanArm

./: .gitignore  CMakeLists.txt  README.md
design/: robot.URDF
include/hummanArm/: all.hpp  data.hpp  debug.hpp  hello_world.hpp  math.hpp  sympole.hpp
outin/: forward.txt  jacobian.txt
python/: generateJacobianMatrix.py  generate_forward_data.py  plot_robot.py  robot.py
src/: data.cpp  hello_world.cpp  math.cpp  sympole.cpp
tests/: RobotRead.cpp  anyThing.cpp  createDataBase.cpp  forwardList.cpp  forwardSpeed.cpp  forwardUsingEquationsList.cpp  forward_str.cpp  forward_test.cpp  forward_test2.cpp  generateForwardEquations.cpp  generateInverseEquationsFunction.cpp  generateInverseTest.cpp  generate_inverse_test.cpp  hello_world_test.cpp  inverseSpeed.cpp  inverse_test.cpp  jacobianSimple.cpp  jacobianSpeed.cpp  list_inverse_test.cpp  prod_test.cpp  strip_test.cpp
